<resources>
    <string name="app_name">CreateAccount</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="full_name">Full Name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_a_member">Already a member</string>
    <string name="log_in">Log in</string>
    <string name="by_checking_the_box_you_agree_to_our_terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_phno">Please enter phone no.</string>
    <string name="please_enter_full_name">Please enter your name.</string>
    <string name="title_activity_dashboard">Dashboard</string>
</resources>